# tum-verify

./: .gitignore  Cargo.toml  README.md  config_sample.toml
src/: config.rs  database.rs  email.html  email.rs  email.txt  main.rs  serenity.rs  util.rs  verify.rs
src/prelude/: interaction.rs  language.rs  message_builder.rs  mod.rs  util.rs  vanity_uses.rs
src/ui/: embed.rs  message.rs  mod.rs  modal.rs
