[package]
name = "rust"
version = "0.1.0"
authors = []
edition = "2021"

[[bin]]
name = "tum_verify"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
anyhow = "1.0.66"
serde = "1.0.147"
toml = "0.8.8"
serde_json = "1.0.87"
either = "1.8.0"
derive-getters = "0.3.0"
enum-iterator = "1.2.0"
rusqlite = "0.30.0"

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["gateway", "rustls_backend", "client", "collector"]

[dependencies.uuid]
version = "1.2.1"
features = ["v4"]

[dependencies.lettre]
version = "0.11.2"
features = ["tokio1-native-tls"]
